[package]
name = "pwncli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pwnc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }