[package]
name = "pwnkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
colored = "3.0.0"